@@ -1,3 +1,7 @@
+2011-09-04 Borut Razem <borut.razem AT gmail.com>
+
+	* support/scripts/sdcc.nsi: include readline5.dll in 64bit package
+
 2011-09-02 Borut Razem <borut.razem AT gmail.com>
 
 	* lib/bootstrap.mk: 2nd try:
